split slides and notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ notes.md
 imd_loader.py
 langsplitter.r
 Lexicon-based-approaches_cache/
+media/personalization.png
+media/ghetto.png
+Lexicon-based-approaches-slides.html
